# xc-bela-bootstrap

./: CMakeLists.txt  Makefile  Toolchain.cmake  cmake2meson.py  meson.build  xc-bela-bootstrap.code-workspace
.cache/clangd/index/: Bela.h.99DFB5B0255ED66C.idx  default_main.cpp.F19DDE7DE3BDB769.idx  render.cpp.2DDDDA6D7A42DD51.idx
scripts/: rich_copy_from_bela.sh
src/: CMakeLists.txt  notCMakeLists copy.txt  notCMakeLists libgig.txt  render.cpp  render_sinetone.cpp
src/LCD7789WS/: CMakeLists.txt  Makefile
src/LCD7789WS/src/examples/: main.c
src/LCD7789WS/src/lib/Config/: DEV_Config.c  DEV_Config.h  dev_hardware_SPI.c
src/LCD7789WS/src/lib/Fonts/: fonts.h
src/LCD7789WS/src/lib/GUI/: GUI_BMPfile.c  GUI_Paint.c  GUI_Paint.h
src/LCD7789WS/src/lib/LCD/: LCD_2inch.c  LCD_2inch.h
src/libgig/libgig/: CMakeLists.txt
src/libgig/libgig/.svn/: wc.db
src/meson/testproject/: testproject.c
src/meson/testproject/compile/: .ninja_deps  .ninja_log  build.ninja  testproject
src/meson/testproject/compile/meson-logs/: meson-log.txt
src/sinetone/sinetone/: CMakeLists.txt
sysroot/root/Bela/include/: Bela.h  pru_rtaudio_UDA1334_bin.h  pru_rtaudio_bin.h  pru_rtaudio_irq_bin.h
sysroot/usr/include/lilv-0/lilv/: lilv.h
sysroot/usr/lib/: liblilv-0.so.0.24.2
sysroot/usr/lib/arm-linux-gnueabihf/: libXinerama.so.1  libcurl.so.3  libdatrie.so.1  libdns-pkcs11.so.162.1.3  libdns.so.162.1.3  libgailutil.so.18.0.1  libgdk-x11-2.0.so.0  libgdk_pixbuf-2.0.so.0  libgdk_pixbuf_xlib-2.0.so.0.3600.5  libgnutls-dane.so.0  libgnutls-openssl.so.27  libgraphite2.so.3.0.1  libgtk-x11-2.0.so.0  libharfbuzz.so.0  libicui18n.so.57  libicuio.so.57  libicutest.so.57.1  libicutu.so.57.1  libicuuc.so.57.1  libjacknet.so.0.1.0  libjackserver.so.0  liblber-2.4.so.2  libldap_r-2.4.so.2.10.7  libperl.so.5.24.1  librsvg-2.so.2  libsord-0.so.0  libsratom-0.so.0  libthai.so.0
sysroot/usr/lib/arm-linux-gnueabihf/gdk-pixbuf-2.0/: gdk-pixbuf-query-loaders
sysroot/usr/lib/arm-linux-gnueabihf/gdk-pixbuf-2.0/2.10.0/: loaders.cache
sysroot/usr/lib/arm-linux-gnueabihf/gtk-2.0/2.10.0/: immodules.cache
sysroot/usr/lib/arm-linux-gnueabihf/libgtk2.0-0/: gtk-query-immodules-2.0
sysroot/usr/lib/arm-linux-gnueabihf/perl/5.24.1/CORE/: config.h
sysroot/usr/lib/arm-linux-gnueabihf/perl/cross-config-5.24.1/: Config_heavy.pl
sysroot/usr/lib/arm-linux-gnueabihf/pkgconfig/: serd-0.pc  sord-0.pc  sratom-0.pc
sysroot/usr/lib/lv2/calf.lv2/: Analyzer.ttl  BassEnhancer.ttl  CompensationDelay.ttl  Compressor.ttl  Crusher.ttl  Deesser.ttl  Emphasis.ttl  EnvelopeFilter.ttl  Equalizer12Band.ttl  Equalizer30Band.ttl  Equalizer5Band.ttl  Equalizer8Band.ttl  Exciter.ttl  Filter.ttl  Filterclavier.ttl  Flanger.ttl  Fluidsynth.ttl  Gate.ttl  HaasEnhancer.ttl  Limiter.ttl  MonoCompressor.ttl  MonoInput.ttl  Monosynth.ttl  MultiChorus.ttl  MultibandCompressor.ttl  MultibandGate.ttl  MultibandLimiter.ttl  Organ.ttl  Phaser.ttl  Pulsator.ttl  Reverb.ttl  ReverseDelay.ttl  RingModulator.ttl  RotarySpeaker.ttl  Saturator.ttl  SidechainCompressor.ttl  SidechainGate.ttl  SidechainLimiter.ttl  StereoTools.ttl  TapeSimulator.ttl  (+8 more)
sysroot/usr/local/include/sord-0/sord/: sord.h
sysroot/usr/local/include/sratom-0/sratom/: sratom.h
sysroot/usr/local/lib/: libseasocks.so.1.4.2  libserd-0.so.0  libsord-0.so.0.16.7  libsuil-0.so.0
sysroot/usr/local/lib/libgig/: libakai.la  libakai.so.0.0.0  libgig.la
sysroot/usr/xenomai/include/: xeno_config.h
sysroot/usr/xenomai/lib/: libalchemy.la  libalchemy.so.0.0.0  libanalogy.la  libanalogy.so.1.0.0  libcobalt.la  libcobalt.so.2.0.0  libcopperplate.la  libcopperplate.so.0.0.0  libmodechk.la  libmodechk.so.0.0.0  libpsos.la  libpsos.so.0.0.0  libsmokey.la  libsmokey.so.0.0.0  libtrank.la  libtrank.so.0.0.0  libvxworks.la  libvxworks.so.0.0.0
