#project(my-bela-project VERSION 0.1.0)
# message('yop level cmake')
cmake_runtime_output_directory = [cmake_binary_dir, '/bin']
cmake_c_flags = '${CMAKE_C_FLAGS} -O0 -g -fPIC -ftree-vectorize -ffast-math'
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2 -march=armv7-a -mtune=cortex-a8 -mfloat-abi=hard -mfpu=neon -ftree-vectorize")
cmake_cxx_flags = '${CMAKE_CXX_FLAGS} -O0 -g -fPIC -ftree-vectorize -ffast-math'
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -fPIC -ftree-vectorize -ffast-math")
#changed these to match Jalv waf, originals are commented
# include_directories([cmake_sysroot, '/root/Bela/include', cmake_sysroot, '/usr/include', cmake_sysroot, '/usr/include/c++/6.3.0', cmake_sysroot, '/usr/include/arm-linux-gnueabihf', cmake_sysroot, '/usr/include/arm-linux-gnueabihf/c++/6.3.0', cmake_sysroot, '/root/Bela', cmake_sysroot, '/usr/xenomai/include', cmake_sysroot, '/usr/xenomai/include/rtdm', cmake_sysroot, '/usr/xenomai/include/trank', cmake_sysroot, '/usr/xenomai/include/cobalt'])
# link_directories([cmake_sysroot, '/usr/lib/gcc/arm-linux-gnueabihf/6.3.0', cmake_sysroot, '/usr/local/lib', cmake_sysroot, '/usr/xenomai/lib', cmake_sysroot, '/root/Bela/lib'])
# link_libraries(['cobalt', 'modechk', 'pthread', 'rt', 'prussdrv', 'asound', 'seasocks', 'NE10', 'mathneon', 'dl', 'sndfile', 'pd', 'atomic'])
